k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taxonomy-service
  namespace: taxonomy
  labels:
    app: taxonomy
spec:
  type: ClusterIP
  selector:
    app: taxonomy
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
